--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,6 @@
 
     <load src="partials/9-footer.html" />
     <load src="partials/10-modal-window.html" />
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
