--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -30,6 +29,7 @@
 
     <load src="partials/9-footer.html" />
     <load src="partials/10-modal-window.html" />
-    <script src="./main.js"></script>
+
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
