--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
     />
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./slick/slick.css" />
+    <link rel="stylesheet" href="./slick/slick-theme.css" />
   </head>
 
   <body>
@@ -32,5 +34,8 @@
     <load src="partials/10-modal-window.html" />
 
     <script type="module" src="./main.js"></script>
+    <script type="module" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="module" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="module" src="./slick/slick.js"></script>
   </body>
 </html>
