--- a/src/index.html
+++ b/src/index.html
@@ -33,9 +33,10 @@
     <load src="partials/9-footer.html" />
     <load src="partials/10-modal-window.html" />
 
-    <script type="module" src="./main.js"></script>
     <script type="module" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="module" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="module" src="./slick/slick.js"></script>
+    <script type="module" src="./slick-in.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
